# DataEngineering_Bootcamp_04

./: README.md  exercise.py  exercises.ipynb  exercises_aula04.ipynb  files_reader.py  pyproject.toml
