[tool.poetry]
name = "aula04-bootcamp"
version = "0.1.0"
description = ""
authors = ["Igor Ambrozini <igorwebd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipynb = "^0.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
